--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon -e \"ts\" --exec \"npm run run:dev\"",
 		"build": "tsc",
 		"start": "node .",
-		"build:docker": "docker build -t redidb ."
+		"build:docker": "docker build -t redcrafter07/redi-db:0.1 ."
 	},
 	"repository": {
 		"type": "git",
